# file-router

./: .gitignore  README.en.md  README.md  pyproject.toml
docs/: 01-architecture.md  02-flows.md  04-data-formats.md  05-configuration.md  06-encryption.md  07-hashing.md  10-security-policy.md  12-deployment.md  13-operations-guide.md  14-risk-analysis.md  16-disaster-recovery.md  18-testing-strategy.md  README.md
docs/en/: 00-overview.md  01-architecture.md  02-flows.md  03-state-management.md  04-data-formats.md  05-configuration.md  06-encryption.md  07-hashing.md  08-observability.md  09-error-handling.md  10-security-policy.md  11-archival-retention.md  12-deployment.md  13-operations-guide.md  14-risk-analysis.md  15-versioning-upgrade.md  16-disaster-recovery.md  17-project-structure.md  18-testing-strategy.md  ARCHITECTURE.md  OPERATIONS.md  README.md  SECURITY.md
docs/examples/: ABC123.audit.json  PAYMENT_OUT_20260608T120000_ABC123.meta.json  config.example.yaml
docs/fr/: 00-overview.md  01-architecture.md  02-flows.md  03-state-management.md  04-data-formats.md  05-configuration.md  08-observability.md  09-error-handling.md  11-archival-retention.md  12-deployment.md  13-operations-guide.md  15-versioning-upgrade.md  17-project-structure.md  ARCHITECTURE.md  OPERATIONS.md  README.md  SECURITY.md
docs/schemas/: audit.schema.json  config.schema.json  metadata.schema.json
scripts/: build-portable-win.ps1  test-service-win-e2e.ps1
src/filerouter/: __init__.py  __main__.py  version.py
tests/: conftest.py
tests/e2e/: test_compression_e2e.py  (+12 more)
(+72 files in other folders)
