[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "filerouter"
version = "1.0.0"
description = "Routeur de fichiers local, sans réseau, pour environnements d'entreprise (sans base de données)."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Jerome COLLETTE" }]
keywords = ["file-router", "openpgp", "audit", "enterprise", "filesystem"]

dependencies = [
    "PyYAML>=6.0",
    "jsonschema>=4.0",
]

[project.optional-dependencies]
gnupg = ["python-gnupg>=0.5"]
pgpy = ["PGPy>=0.6"]
windows = ["pywin32>=306; sys_platform == 'win32'"]
dev = [
    "pytest>=8",
    "pytest-cov",
    "hypothesis",
    "ruff",
    "mypy",
]

[project.scripts]
filerouter = "filerouter.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
filerouter = ["config/_schemas/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src", "."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
